Return streams from more SecurityPolicy methods