@@ -644,7 +644,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         // For audit purposes, we use the first user as the originator of the message.
         // Would be better to have this be a site admin, but we aren't guaranteed to have such a user
         // for hosted sites. Another option is to use the guest user here, but that's strange.
-        svc.sendMessages(messages, users.get(0), ContainerManager.getRoot());
+        svc.sendMessages(messages, users.getFirst(), ContainerManager.getRoot());
     }
 
     private @Nullable String getValue(Map<StashedStartupProperties, StartupPropertyEntry> map, StashedStartupProperties prop)
@@ -1594,15 +1594,17 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
             properties.put(SearchService.PROPERTY.categories.toString(), SearchService.navigationCategory.getName());
             ActionURL startURL = PageFlowUtil.urlProvider(ProjectUrls.class).getStartURL(c);
             startURL.setExtraPath(c.getId());
-            WebdavResource doc = new SimpleDocumentResource(c.getParsedPath(),
-                    "link:" + c.getId(),
-                    c.getEntityId(),
-                    "text/plain",
-                    body,
-                    startURL,
-                    UserManager.getUser(c.getCreatedBy()), c.getCreated(),
-                    null, null,
-                    properties);
+            WebdavResource doc = new SimpleDocumentResource(
+                c.getParsedPath(),
+                "link:" + c.getId(),
+                c.getEntityId(),
+                "text/plain",
+                body,
+                startURL,
+                UserManager.getUser(c.getCreatedBy()), c.getCreated(),
+                null, null,
+                properties
+            );
             queue.addResource(doc);
         };
         r.run();
@@ -1672,8 +1674,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                 if (supportFolder != null)
                 {
                     MutableSecurityPolicy supportPolicy = new MutableSecurityPolicy(supportFolder.getPolicy());
-                    for (Role assignedRole : supportPolicy.getAssignedRoles(guests))
-                        supportPolicy.removeRoleAssignment(guests, assignedRole);
+                    supportPolicy.getAssignedRoles(guests).forEach(assignedRole ->
+                        supportPolicy.removeRoleAssignment(guests, assignedRole)
+                    );
                     SecurityPolicyManager.savePolicy(supportPolicy, User.getAdminServiceUser());
                 }
             }
